--- a/src/App.css
+++ b/src/App.css
@@ -38,4 +38,39 @@
 }
 img:hover{
   filter: brightness(120%);
+  cursor:pointer;
+}
+
+img{
+  box-shadow: 10px 10px 5px #ccc;
+}
+
+img:active {
+  margin: 1px 1px 0;
+  box-shadow: -1px -1px 1px #ccc;
+}
+
+figure {
+  position: relative;
+}
+figure figcaption {
+  color: black;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  padding: 15px;
+  font-size: smaller;
+  font-weight: 900;
+  font-family: "Monda";
+}
+
+footer
+{
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: red;
+  color: white;
+  text-align: center;
 }
