--- a/src/App.css
+++ b/src/App.css
@@ -36,16 +36,15 @@
     transform: rotate(360deg);
   }
 }
-img:hover{
+.imgbutton:hover{
   filter: brightness(110%);
   cursor:pointer;
 }
 
-img{
+.imgbutton{
   box-shadow: 5px 5px 5px rgb(85, 76, 76);
 }
-
-img:active {
+.imgbutton:active {
   margin: 2px 0px 0;
   box-shadow: -5px -5px 5px rgb(85, 76, 76);
 }
